# lifelines-hc

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
AppNote/: 01_get_kmdata.py  make_figure.py  make_report.py  run_azure.py  run_comet.py  run_csl.py  run_immuno_oncology.py  utils.py
AppNote/data/: _export_kmdata.R
AppNote/paper/: main.tex  main_bullet.tex  refs.bib  supplement.tex
AppNote/results/: azure_test_results.csv  comet_test_results.csv  csl_test_results.csv  immuno_test_results.csv
examples/: plot_survival_with_hc.py
lifelines_hc/: __init__.py  plotting.py  statistics.py
tests/: test_statistics.py
